force-app/main/default/objects/Asset/fields/Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Health_Status__c</fullName>
    <label>Health Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>