force-app/main/default/objects/Asset/fields/Last_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Maintenance_Date__c</fullName>
    <label>Last Maintenance Date</label>
    <type>Date</type>
</CustomField>