force-app/main/default/objects/Asset/fields/Next_Maintenance_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Maintenance_Date__c</fullName>
    <label>Next Maintenance Date</label>
    <type>Date</type>
</CustomField>