force-app/main/default/objects/Asset/fields/Sensor_Id__c.field-meta.xml
<CustomField>
    <fullName>Sensor_Id__c</fullName>
    <label>Sensor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>